--- a/tabelas/index.html
+++ b/tabelas/index.html
@@ -30,6 +30,7 @@
       <thead>
         <th colspan="2">
           <h2>Massas do Sistema Solar</h2>
+          Massas do Sistema Solar
         </th>
       </thead>
       <tr>
