--- a/forms/form1.html
+++ b/forms/form1.html
@@ -7,11 +7,10 @@
     <title>Form para o Google</title>
   </head>
   <body>
-    <h3>Encontre no Google</h3>
-    <form action="https://www.google.com/search">
-      <label for="q">Digite sua busca:</label>
-      <input type="text" id="q" name="q" required />
-      <input type="submit" value="Pesquisar" />
+    <form action="https:www.google.com/search">
+      <label for="q">Pesquisar:</label>
+      <input type="text" name="q" id="q" placeholder="Nasa, SpaceX" required />
+      <input type="submit" value="Buscar" />
     </form>
   </body>
 </html>
