--- a/forms/formastronauta.html
+++ b/forms/formastronauta.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h3>Cadastro da Liga dos Astronautas</h3>
-    <form action="">
+    <form>
       <label for="nome">Nome:</label>
       <input type="text" name="nome" id="nome" required /><br /><br />
       <label for="nome">E-mail:</label>
@@ -23,15 +23,33 @@
       <select name="nacio" id="nacio">
         <option value="brasileira">Brasileira</option>
         <option value="alemã">Alemã</option>
-        <option value="suíça">Suíça</option></select
-      ><br /><br />
-      <label for="genero">Gênero:</label>
+        <option value="suíça">Suíça</option>
+      </select>
+      <label for="genero">- Gênero:</label>
       <input type="radio" name="gen" id="masc" />
       <label for="masc">Masculino</label>
       <input type="radio" name="gen" id="fem" />
       <label for="fem">Feminino</label>
       <input type="radio" name="gen" id="outros" />
       <label for="outros">Outros</label>
+      <p>Suas principais habilidades:</p>
+      <input type="checkbox" name="int" id="int" />
+      <label for="int">Inteligência</label>
+      <input type="checkbox" name="res" id="res" />
+      <label for="res">Resiliência</label>
+      <input type="checkbox" name="prep" id="prep" />
+      <label for="prep">Preparo físico</label>
+      <input type="checkbox" name="edu" id="edu" />
+      <label for="edu">Educação</label><br /><br />
+      <textarea
+        name=""
+        id=""
+        cols="30"
+        rows="10"
+        placeholder="Por que você gostaria de ser um astronauta?"
+      ></textarea
+      ><br />
+      <input type="submit" value="ENVIAR" />
     </form>
   </body>
 </html>
