--- a/spacex/index.html
+++ b/spacex/index.html
@@ -10,13 +10,64 @@
     <header>
       <nav>
         <a href="index.html"><img src="./imagens/logo (2).png" alt="" /></a>
-        <a href="http://">| Spaceships</a>
-        <a href="http://">| Hire Us</a>
+        <a href="spaceships.html">| Spaceships</a>
+        <a href="hireus.html">| Hire Us</a>
       </nav>
+      <hr />
       <section>
-        <article></article>
-        <article></article>
-        <article></article>
+        <article>
+          <h3>Space Exploration Technologies Corp.</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Consequatur vitae quia libero illum tempore culpa dolore iste
+            ratione corrupti iure, nesciunt, quibusdam totam in facilis at omnis
+            necessitatibus cupiditate! Minima.
+          </p>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Consequatur vitae quia libero illum tempore culpa dolore iste
+            ratione corrupti iure, nesciunt, quibusdam totam in facilis at omnis
+            necessitatibus cupiditate! Minima.
+          </p>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Consequatur vitae quia libero illum tempore culpa dolore iste
+            ratione corrupti iure, nesciunt, quibusdam totam in facilis at omnis
+            necessitatibus cupiditate! Minima.
+          </p>
+        </article>
+        <article>
+          <h3>Our Services</h3>
+          <ul>
+            <li>Lorem ipsum dolor</li>
+            <li>Consequatur vitae</li>
+            <li>Illo placeat, lab</li>
+            <li>Minima</li>
+          </ul>
+        </article>
+        <article>
+          <h3>Prices</h3>
+          <table border="1">
+            <th>Service</th>
+            <th>Value</th>
+            <tr>
+              <td>Lorem ipsum dolor</td>
+              <td>$450</td>
+            </tr>
+            <tr>
+              <td>Consequatur vitae</td>
+              <td>$440</td>
+            </tr>
+            <tr>
+              <td>Illo placeat, lab</td>
+              <td>$200</td>
+            </tr>
+            <tr>
+              <td>Minima</td>
+              <td>$330</td>
+            </tr>
+          </table>
+        </article>
       </section>
     </header>
   </body>
