--- a/spacex/hireus.html
+++ b/spacex/hireus.html
@@ -29,9 +29,15 @@
           <option value="falcon_9">Falcon 9</option>
           <option value="falcon_heavy">Falcon Heavy</option>
         </select>
-        <label for="service">- Service</label>
-        <input type="search" name="service" id="service" list="service" />
-          
+        <label for="service"></label>
+        <input type="search" name="service" id="service" list="services" />
+        <datalist id="services">
+          <option value="Lorem ipsum dolor"></option>
+          <option value="Consequatur vitae"></option>
+          <option value="Illo"></option>
+          <option value="Minima"></option>
+        </datalist>
+
         <br /><br />
         <input type="submit" value="SEND" />
       </section>
