--- a/spacex/hireus.html
+++ b/spacex/hireus.html
@@ -20,16 +20,16 @@
           Leave a message to request one of our services and we will get back to
           you as soon as possible.
         </p>
-        <label for="name">Name</label>
+        <label for="name">Name:</label>
         <input type="text" name="name" id="name" />
-        <label for="email">- E-mail</label>
+        <label for="email">- E-mail:</label>
         <input type="email" name="email" id="email" /><br /><br />
-        <label for="spaceship">Spaceship</label>
+        <label for="spaceship">Spaceship:</label>
         <select name="spaceship" id="spaceship">
-          <option value="falcon_9">Falcon 9</option>
+          <option value="falcon_9">Falcon 9:</option>
           <option value="falcon_heavy">Falcon Heavy</option>
         </select>
-        <label for="service"></label>
+        <label for="service"> - Services:</label>
         <input type="search" name="service" id="service" list="services" />
         <datalist id="services">
           <option value="Lorem ipsum dolor"></option>
