--- a/spacex/hireus.html
+++ b/spacex/hireus.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hire Us</title>
+    <link rel="stylesheet" href="hireus.css" />
   </head>
   <body>
     <header>
@@ -13,7 +14,7 @@
         <a href="spaceships.html">| Spaceships</a>
         <a href="hireus.html">| Hire Us</a>
       </nav>
-      <hr />
+
       <section>
         <h3>Hire Us now!</h3>
         <p>
